<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RefuelRecordFragment">
    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/ic_back"/>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistic"
            android:textColor="@color/theme"
            android:textSize="16sp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="11dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_refuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuel_record"
        android:textSize="28dp"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_back"
        />
    <com.creageek.segmentedbutton.SegmentedButton
        android:id="@+id/segmented"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="23dp"
        android:layout_marginStart="30dp"
        android:padding="2dp"
        android:orientation="horizontal"
        app:segmentHeight="31dp"
        android:background="@drawable/btn_line"
        app:segmentColor="@color/theme"
        app:textColorChecked="@color/theme"
        app:textColor="@color/white"
        app:segmentColorChecked="@color/white"
        app:cornerRadius="4dp"
        app:borderColor="@color/theme"
        app:layout_constraintTop_toBottomOf="@id/tv_refuel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
    </com.creageek.segmentedbutton.SegmentedButton>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFuel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/segmented"/>

</androidx.constraintlayout.widget.ConstraintLayout>