<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingFragment">
    <TextView
        android:id="@+id/tv_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="28dp"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:id="@+id/ll_add"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:background="@drawable/bg_rectangle_green"
        app:layout_constraintTop_toBottomOf="@id/tv_set">
        <ImageView
            android:id="@+id/iv_device"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_add"/>
        <TextView
            android:id="@+id/tv_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/white"
            android:text="@string/add_device"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_set">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/instrument"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:text="@string/device_list"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/ll_add"/>

    <LinearLayout
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_line">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_error"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:text="@string/fault_list"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_line_second"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/ll_list"/>
    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_line_second">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_scan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:text="@string/search"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_line_third"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/ll_search"/>
    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_line_third">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/iocn_threshold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:text="@string/setting_threshold"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_line_tourth"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/ll_setting"/>

</androidx.constraintlayout.widget.ConstraintLayout>