<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".fragment.StatisticFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_statis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistical"
            android:textSize="28dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:id="@+id/segmentedBack"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_rectangle_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_statis">
            <com.creageek.segmentedbutton.SegmentedButton
                android:id="@+id/segmented"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:padding="2dp"
                android:orientation="horizontal"
                app:segmentHeight="31dp"
                android:background="@drawable/btn_line"
                app:segmentColor="@color/theme"
                app:textColorChecked="@color/theme"
                app:textColor="@color/white"
                app:segmentColorChecked="@color/white"
                app:cornerRadius="4dp"
                app:borderColor="@color/theme">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textSize="16sp"
                    android:gravity="center_vertical"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/week"
                    android:textSize="16sp"
                    android:gravity="center_vertical"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month"
                    android:textSize="16sp"
                    android:gravity="center_vertical"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="16sp"
                    android:gravity="center_vertical"/>
            </com.creageek.segmentedbutton.SegmentedButton>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:id="@+id/leftButton"
                    android:layout_width="24dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginVertical="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/icon_left">
                </ImageView>

                <TextView
                    android:id="@+id/centerTime"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/leftButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/rightButton">
                </TextView>
                <ImageView
                    android:id="@+id/rightButton"
                    android:layout_width="24dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginVertical="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/icon_right">
                </ImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_fuel_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_record"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/segmentedBack"/>

        <ImageView
            android:id="@+id/placeholder_fuel_record"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fuel_record"/>
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart_fuel"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fuel_record"/>

        <TextView
            android:id="@+id/tv_consumption_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumption_record"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_fuel"/>

        <ImageView
            android:id="@+id/placeholder_consumption"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_consumption_record"/>
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart_consumption"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_consumption_record"/>


        <TextView
            android:id="@+id/tv_refuel_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refuel_record"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_consumption"/>

        <ImageView
            android:id="@+id/placeholder_refuel_record"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/tv_refuel_record"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart_refuel"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_refuel_record"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>