<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingAppParametersFragment">

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/ic_back"/>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/theme"
            android:textSize="16sp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="11dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/setting_threshold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_back"
        />
    <EditText
        android:id="@+id/et_threshold"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:hint="@string/setting_threshold"
        android:maxLength="5"
        android:paddingStart="10dp"
        android:background="@drawable/bg_rectangle_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_threshold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="L"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/et_threshold"
        app:layout_constraintEnd_toEndOf="@id/et_threshold"
        app:layout_constraintBottom_toBottomOf="@id/et_threshold"/>

    <Button
        android:id="@+id/btn_setting_save"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/save"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_rectangle_green"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

